--- a/LOTAWeb/Areas/Admin/Views/Student/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Student/Index.cshtml
@@ -325,7 +325,7 @@
                 <div class="modal-body">
                     @token
                     <div class="mb-3">
-                        <label for="excelFile" class="form-label">Select Excel File</label>
+                        <label for="excelFile" class="form-label">Select Excel File</label><span class="text-danger">*</span>
                         <input type="file" class="form-control" id="excelFile" name="excelFile" accept=".xlsx,.xls" required>
                     </div>
                     <div class="alert alert-info">
