--- a/LOTAWeb/Areas/Admin/Views/Assessment/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Assessment/Index.cshtml
@@ -196,7 +196,7 @@
                 <form id="addAssessmentForm">
                     <div class="row g-3">
                         <div class="col-12">
-                            <label for="courseId" class="form-label">Course</label>
+                            <label for="courseId" class="form-label">Course</label><span class="text-danger">*</span>
                             <div class="position-relative">
                                 <input type="text" id="courseSearchInput" class="form-control" placeholder="Type to search course code or name..." onkeyup="filterCourseOptions()" onfocus="showDropdown()" onblur="hideDropdown()">
                                 <div id="courseDropdown" class="dropdown-menu w-100" style="display: none; max-height: 300px; overflow-y: auto;">
@@ -207,12 +207,12 @@
                         </div>
                         
                         <div class="col-12 col-md-6">
-                            <label for="assessmentName" class="form-label">Assessment Name</label>
+                            <label for="assessmentName" class="form-label">Assessment Name</label><span class="text-danger">*</span>
                             <input type="text" class="form-control" id="assessmentName" name="assessmentName" placeholder="e.g., Assignment 1, Final Exam" required>
                         </div>
                         
                         <div class="col-12 col-md-6">
-                            <label for="assessmentType" class="form-label">Assessment Type</label>
+                            <label for="assessmentType" class="form-label">Assessment Type</label><span class="text-danger">*</span>
                             <select class="form-select" id="assessmentType" name="assessmentType" required>
                                 <option value="">Select Type</option>
                                 <option value="">Loading assessment types...</option>
@@ -220,17 +220,17 @@
                         </div>
                         
                         <div class="col-12 col-md-6">
-                            <label for="Weight" class="form-label">Weight (%)</label>
+                            <label for="Weight" class="form-label">Weight (%)</label><span class="text-danger">*</span>
                             <input type="number" class="form-control" id="Weight" name="Weight" min="0" max="100" step="0.01" placeholder="e.g., 25.50" required>
                         </div>
                         
                         <div class="col-12 col-md-6">
-                            <label for="Score" class="form-label">Score</label>
+                            <label for="Score" class="form-label">Score</label><span class="text-danger">*</span>
                             <input type="number" class="form-control" id="Score" name="Score" min="0" step="0.01" placeholder="e.g., 100.00" required>
                         </div>
                         
                         <div class="col-12">
-                            <label class="form-label">Learning Outcomes</label>
+                            <label class="form-label">Learning Outcomes</label><span class="text-danger">*</span>
                             <div id="learningOutcomesContainer">
                                 <!-- Learning outcomes will be loaded dynamically based on selected course -->
                             </div>
@@ -302,12 +302,12 @@
                     
                     <div class="row g-3">
                         <div class="col-12 col-md-6">
-                            <label for="editAssessmentName" class="form-label">Assessment Name</label>
+                            <label for="editAssessmentName" class="form-label">Assessment Name</label><span class="text-danger">*</span>
                             <input type="text" class="form-control" id="editAssessmentName" name="assessmentName" required>
                         </div>
                         
                         <div class="col-12 col-md-6">
-                            <label for="editAssessmentType" class="form-label">Assessment Type</label>
+                            <label for="editAssessmentType" class="form-label">Assessment Type</label><span class="text-danger">*</span>
                             <select class="form-select" id="editAssessmentType" name="assessmentType" required>
                                 <option value="">Select Type</option>
                                 <option value="">Loading assessment types...</option>
@@ -315,17 +315,17 @@
                         </div>
                         
                         <div class="col-12 col-md-6">
-                            <label for="editWeight" class="form-label">Weight (%)</label>
+                            <label for="editWeight" class="form-label">Weight (%)</label><span class="text-danger">*</span>
                             <input type="number" class="form-control" id="editWeight" name="Weight" min="0" max="100" step="0.01" required>
                         </div>
                         
                         <div class="col-12 col-md-6">
-                            <label for="editScore" class="form-label">Score</label>
+                            <label for="editScore" class="form-label">Score</label><span class="text-danger">*</span>
                             <input type="number" class="form-control" id="editScore" name="Score" min="0" step="0.01" required>
                         </div>
                         
                         <div class="col-12">
-                            <label class="form-label">Learning Outcomes</label>
+                            <label class="form-label">Learning Outcomes</label><span class="text-danger">*</span>
                             <div id="editLearningOutcomesContainer">
                                 <!-- Learning outcomes will be loaded dynamically -->
                             </div>
