--- a/LOTAWeb/Areas/Tutor/Views/Assessment/Index.cshtml
+++ b/LOTAWeb/Areas/Tutor/Views/Assessment/Index.cshtml
@@ -164,25 +164,25 @@
                             <input type="hidden" id="courseId" name="courseId">
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="assessmentName" class="form-label">Assessment Name</label>
+                            <label for="assessmentName" class="form-label">Assessment Name</label><span class="text-danger">*</span>
                             <input type="text" class="form-control" id="assessmentName" name="assessmentName" required>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="assessmentType" class="form-label">Assessment Type</label>
+                            <label for="assessmentType" class="form-label">Assessment Type</label><span class="text-danger">*</span>
                             <select class="form-select" id="assessmentType" name="assessmentType" required>
                                 <option value="">Select Type</option>
                             </select>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="Weight" class="form-label">Weight (%)</label>
+                            <label for="Weight" class="form-label">Weight (%)</label><span class="text-danger">*</span>
                             <input type="number" class="form-control" id="Weight" name="Weight" min="0" max="100" step="0.01" required>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="Score" class="form-label">Score</label>
+                            <label for="Score" class="form-label">Score</label><span class="text-danger">*</span>
                             <input type="number" class="form-control" id="Score" name="Score" min="0" step="0.01" required>
                         </div>
                         <div class="col-12">
-                            <label class="form-label">Learning Outcomes</label>
+                            <label class="form-label">Learning Outcomes</label><span class="text-danger">*</span>
                             <div id="learningOutcomesContainer"></div>
                         </div>
                     </div>
@@ -217,25 +217,25 @@
                     <input type="hidden" id="editTrimesterId" name="trimesterId">
                     <div class="row g-3">
                         <div class="col-12 col-md-6">
-                            <label for="editAssessmentName" class="form-label">Assessment Name</label>
+                            <label for="editAssessmentName" class="form-label">Assessment Name</label><span class="text-danger">*</span>
                             <input type="text" class="form-control" id="editAssessmentName" name="assessmentName" required>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="editAssessmentType" class="form-label">Assessment Type</label>
+                            <label for="editAssessmentType" class="form-label">Assessment Type</label><span class="text-danger">*</span>
                             <select class="form-select" id="editAssessmentType" name="assessmentType" required>
                                 <option value="">Select Type</option>
                             </select>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="editWeight" class="form-label">Weight (%)</label>
+                            <label for="editWeight" class="form-label">Weight (%)</label><span class="text-danger">*</span>
                             <input type="number" class="form-control" id="editWeight" name="Weight" min="0" max="100" step="0.01" required>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="editScore" class="form-label">Score</label>
+                            <label for="editScore" class="form-label">Score</label><span class="text-danger">*</span>
                             <input type="number" class="form-control" id="editScore" name="Score" min="0" step="0.01" required>
                         </div>
                         <div class="col-12">
-                            <label class="form-label">Learning Outcomes</label>
+                            <label class="form-label">Learning Outcomes</label><span class="text-danger">*</span>
                             <div id="editLearningOutcomesContainer"></div>
                         </div>
                     </div>
