update the qualification page

--- a/LOTAWeb/Areas/Admin/Views/Qualification/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Qualification/Index.cshtml
@@ -74,17 +74,17 @@
                 <form id="addQualificationForm">
                     <div class="row g-3">
                         <div class="col-12 col-md-6">
-                            <label for="qualificationName" class="form-label">Qualification Name</label>
+                            <label for="qualificationName" class="form-label">Qualification Name</label><span class="text-danger">*</span>
                             <input type="text" class="form-control" id="qualificationName" name="qualificationName" required>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="qualificationType" class="form-label">Qualification Type</label>
+                            <label for="qualificationType" class="form-label">Qualification Type</label><span class="text-danger">*</span>
                             <select class="form-select" id="qualificationType" name="qualificationType" required>
                                 <option value="">Select Type</option>
                             </select>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="qualificationLevel" class="form-label">Level</label>
+                            <label for="qualificationLevel" class="form-label">Level</label><span class="text-danger">*</span>
                             <select class="form-select" id="qualificationLevel" name="level" required>
                                 <option value="">Select Level</option>
                                 <option value="1">Level 1</option>
@@ -133,17 +133,17 @@
                     <input type="hidden" id="editQualificationHiddenId" name="id">
                     <div class="row g-3">
                         <div class="col-12 col-md-6">
-                            <label for="editQualificationName" class="form-label">Qualification Name</label>
+                            <label for="editQualificationName" class="form-label">Qualification Name</label><span class="text-danger">*</span>
                             <input type="text" class="form-control" id="editQualificationName" name="qualificationName" required>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="editQualificationType" class="form-label">Qualification Type</label>
+                            <label for="editQualificationType" class="form-label">Qualification Type</label><span class="text-danger">*</span>
                             <select class="form-select" id="editQualificationType" name="qualificationType" required>
                                 <option value="">Select Type</option>
                             </select>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="editQualificationLevel" class="form-label">Level</label>
+                            <label for="editQualificationLevel" class="form-label">Level</label><span class="text-danger">*</span>
                             <select class="form-select" id="editQualificationLevel" name="level" required>
                                 <option value="">Select Level</option>
                                 <option value="1">Level 1</option>
